fixed scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body {
 	width: 100vw;
 	background-color: rgba(29, 20, 6, 0.705);
 	font-family: "Raleway", sans-serif;
+	overflow-x: hidden;
+}
+body::-webkit-scrollbar {
+	width: 0px;
+	background: transparent;
 }
 .bgimg {
 	position: absolute;
